homeworlds.css
/* ... */
@keyframes swell {
    50% {
        transform: scale(.95, .95);
    }
    100% {
        transform: scale(1, 1);
    }
}

/*
Borrowed from
https://www.kirupa.com/snippets/getting_jittery_on_hover_using_only_css.htm
*/
.HWoverpopulated {
    animation-duration: 1s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-name: jittery;
}
 
@keyframes jittery {
    10% {
        transform: rotate(var(--rotateAmount)) translate(-2px, -3px) scale(1.01, 1.01);
    }
    20% {
        transform: rotate(var(--rotateAmount)) translate(3px, 2px) scale(.99, .99);
    }
    30% {
        transform: rotate(var(--rotateAmount)) translate(-4px, -5px) scale(1.01, 1.01);
    }
    40% {
        transform: rotate(var(--rotateAmount)) translate(2px, 3px) scale(1, 1);
    }
    50% {
        transform: rotate(var(--rotateAmount)) translate(-1px, -2px) scale(.98, .98);
    }
    60% {
        transform: rotate(var(--rotateAmount)) translate(0px, 3px) scale(1.02, 1.02);
    }
    70% {
        transform: rotate(var(--rotateAmount)) translate(-2px, -4px) scale(1, 1);
    }
    80% {
        transform: rotate(var(--rotateAmount)) translate(3px, 5px) scale(.99, .99);
    }
    90% {
        transform: rotate(var(--rotateAmount)) translate(-5px, -3px) scale(1.1, 1.1);
    }
    100% {
        transform: rotate(var(--rotateAmount)) translate(3px, 1px) scale(.95, .95);
    }
}

/* Modifications to main BGA display */
.player_score_value{
    display:none
}
.fa-star{
    display:none
}
#HWfirst_player_indicator{
    font-size:75%;
}

/* Turn token */
.HWtoken_space{
    position:relative;/*Relative or absolute position needed for sliding*/
    /* Token moves up 5px on hover, systems are normally 96px high because large ships are 86 px and have 5px above and below*/
    height:96px;
    width:96px;
    margin-top:5px;
    display:inline-block;
    float:left;
}
#HWturn_token{
    position:relative;/*Relative or absolute position needed for sliding*/
    background-image:url('img/turn_token.svg');
    background-repeat:no-repeat;
    background-size:100%;
    height:100%;
    width:100%;
    /*
    Without a z-index it sometimes appears to slide under pieces,
    and pieces need z-index 4 to stay in front of stacked pieces
    */
    z-index:5;
}
#HWturn_token:not(html.dj_safari .HWsliding){
    /*
    Except while sliding in Safari,
    add a subtle white outline to improve edge visibility
    */
    filter:drop-shadow(0px 0px 5px white);
}

/* Animation marker shouldn't appear */
.HWanimarker{
    /*
    display:none;
    This seems to make pieces invisible when markers are used for animations
    */
    position:relative;
    height:0px;
    width:0px;
    /* A size and background make it easier to find when debugging */
    /*height:50px;*/
    /*width:50px;*/
    /*background-color:rebeccapurple;*/
    /**/
}

/*
The centering margins of banked pieces mess up animations otherwise
This should probably be the same as for stars and ships to avoid jumpiness,
but I don't want to include it in the same command since this is the
animation section.
*/
.HWsliding:not(#HWturn_token){
    margin-left:5px;
    margin-right:5px;
}

/*
Try to make tutorial annotations right-side up on hostile ships.
The bobbing animation used by annotations messes up my correction,
so turn it off (not too noticeable)
*/
.HWhostile.HWship>.archiveCommentPointed{
    transform: rotate(180deg);
    left:0;
    animation:none;
    -webkit-animation:none;
}
.HWhostile.HWship.HWsmall>.archiveCommentPointed{
    top:-35px;
}
.HWhostile.HWship.HWmedium>.archiveCommentPointed{
    top:-25px;
}
.HWhostile.HWship.HWlarge>.archiveCommentPointed{
    top:-15px;
}

/* Annotations should all be above pieces */
.archiveCommentPointed{
    z-index:6;
}

